Modified transitional pom so it can still do the install.